# project_fur_felis_catus_hotspot_analysis

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.public  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
analysis/finalised_mafs/: keepPA_vaf_size_filt_matched_6555_2711.finalised.xlsx  keepPA_vaf_size_filt_matched_6711_2820.finalised.xlsx  keepPA_vaf_size_filt_matched_6712_2822.finalised.maf  keepPA_vaf_size_filt_matched_6712_2822.finalised.xlsx  keepPA_vaf_size_filt_matched_6713_2821.finalised.xlsx  keepPA_vaf_size_filt_matched_6841_2964.finalised.xlsx  keepPA_vaf_size_filt_matched_6864_2965.finalised.xlsx  keepPA_vaf_size_filt_matched_6945_3142.finalised.maf  keepPA_vaf_size_filt_matched_6945_3142.finalised.xlsx  keepPA_vaf_size_filt_matched_6973_2987.finalised.xlsx  keepPA_vaf_size_filt_matched_6982_3135.finalised.xlsx  keepPA_vaf_size_filt_matched_6990_3065.finalised.xlsx  keepPA_vaf_size_filt_matched_7040_3064.finalised.xlsx  keepPA_vaf_size_filt_matched_7097_3073.finalised.xlsx  keepPA_vaf_size_filt_matched_7098_3140.finalised.xlsx
cicd_scripts/: build_package_and_publish.sh
src/fur_hotspot_mutations/: __init__.py  __main__.py  check_mpileup_minQ0_samples_from_maf.pl  check_mpileup_samples_from_maf.py  cli.py  entrypoints.py  extract_hotspot_mutations.py  mpileup_variant_filter.py  update_maf_variants.py
src/utils/: constants.py  logging_utils.py  maf_utils.py
tests/: conftest.py
tests/integration/: test_cli.py  test_import.py
tests/mocks/: example.maf  example_mpileup_file.tsv  example_tn_pairs.tsv  example_variant_file.tsv  mock_files.py
tests/unit/fur_hotspot_mutations/: test_extract_hotspot_mutations.py  (+2 more)
(+105 files in other folders)
